# fcch_connmgr-esp-idf

./: CMakeLists.txt  README.md  cm_app_version.cpp  cm_app_version.h  cm_conf.cpp  cm_http.cpp  cm_nvs.cpp  cm_nvs.h  gen-version-h.sh  styles-test.html  styles.html
include/fcch_connmgr/: cm_conf.h
